Fix body no scroll on ios

--- a/_sass/components/_chapter-nav.scss
+++ b/_sass/components/_chapter-nav.scss
@@ -53,12 +53,7 @@
   }
 }
 
-body.sidebar-active {
-  overflow-y: hidden;
-}
-
 .chapter-sidebar {
-  display: block;
   position: fixed;
   z-index: 1000;
   left: -100%;
